Fixed up unit tests and added monitoring API
